--- a/frost_algo/Cargo.toml
+++ b/frost_algo/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [dependencies.luban_core]
 path = "../luban_core"
 
+[dependencies.bip32]
+path = "deps/bip32-Ed25519-0.5.1"
+
 [dependencies.xuanmi_base_support]
 # git = "ssh://git@github.com/taiyi-research-institute/xuanmi_base_support"
 git = "https://github.com/taiyi-research-institute/xuanmi_base_support"
@@ -28,5 +31,6 @@ uuid = { version = "0.8", features = ["v4"] }
 aes-gcm = { version = "0.9", features = ["std"] }
 hex = "0.4"
 zeroize = { version = "1", features = ["zeroize_derive"] }
+hmac = { version = "0.11.0", features = ["std"] }
 
 #endregion
