--- a/frost_algo/Cargo.toml
+++ b/frost_algo/Cargo.toml
@@ -14,8 +14,6 @@ path = "deps/bip32-Ed25519-0.5.1"
 git = "https://github.com/taiyi-research-institute/xuanmi_base_support"
 rev = "731cb963ba00cbc1adf26645eae8a92f3733c76b"
 
-#region External Dependencies
-
 [dependencies]
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
 thiserror = "1.0"
@@ -33,4 +31,6 @@ hex = "0.4"
 zeroize = { version = "1", features = ["zeroize_derive"] }
 hmac = { version = "0.11.0", features = ["std"] }
 
-#endregion
+[dependencies.ed25519-dalek]
+# ver.2 (latest at 2024.01.18) has no struct PublicKey
+version = "1"
