--- a/mpc_algo/Cargo.toml
+++ b/mpc_algo/Cargo.toml
@@ -9,6 +9,7 @@ curve25519-dalek = { version = "3", features = ["serde"] }
 ed25519-dalek = "1" # ver.2 (latest at 2024.01.18) has no struct PublicKey
 hex = "0.4"
 hmac = { version = "0.11.0", features = ["std"] }
+itertools = "0.12"
 rand = "0.7"
 rand_core = "0.6"
 reqwest = { version = "0.10.1", default-features = false, features = ["native-tls", "json", "blocking"] }
